--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     
     .callout {
         border-radius: 3px;
-        padding: 1rem;
+        padding: 1rem 1rem 1rem 1.5rem;
     }
     
     figure {
@@ -519,10 +519,10 @@
         fill: rgb(224,62,62);
     }
     .block-color-gray_background {
-        background: rgb(235,236,237);
+        background: rgb(242, 242, 245);
     }
     .block-color-brown_background {
-        background: rgb(233,229,227);
+        background: rgb(233, 229, 227);
     }
     .block-color-orange_background {
         background: rgb(250,235,221);
