--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         font-size: 20px;
         line-height: 1.5;
         white-space: pre-wrap;
+        font-display: swap;
+        
     }
     
     a,
