--- a/index.html
+++ b/index.html
@@ -660,11 +660,9 @@
                     Devices&#x27; user</strong></h3>
             <p id="c21b71f8-ce87-476a-9266-10a30707148a" class="">Due copyright strike our archive doesn&#x27;t work on
                 Apple Devices, <mark class="highlight-yellow_background">but there is a lifehack:</mark></p>
-            <p id="c6c31484-98ab-436d-a84e-eaa8b5579065" class="">There is Nicegram, it&#x27;s alternative client for
-                iPhone → <strong><a href="https://apps.apple.com/us/app/nicegram/id1457369322">Download for
-                        iPhone</a></strong><strong> </strong>and for Mac OS <strong><a
-                        href="https://macos.telegram.org/">download the client from Telegram website</a></strong>, not
-                from Mac App Store ← <mark class="highlight-yellow_background">read again properly!</mark></p>
+            <p id="c6c31484-98ab-436d-a84e-eaa8b5579065" class=""><strong><a
+                        href="https://macos.telegram.org/">Download a client from Telegram website</a></strong>, not
+                from Mac App Store</p>
             <h2 id="fa8df872-f793-4188-b17e-366f24f57e51" class="">If you don&#x27;t know how to Sign Up, watch this
                 tutorial</h2><iframe class="video-youtube" width="640" height="400"
                 src="https://www.youtube.com/embed/tniO5LCaXbQ" frameborder="0"
