--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Join the Free Archive to download endless free scripts &amp; plugins for After Effects</title>
+    <title>Free scripts and plugins for After Effects</title>
     <style>
         /* webkit printing magic: print all background colors */
         html {
