--- a/index.html
+++ b/index.html
@@ -2,7 +2,21 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Free scripts and plugins for After Effects</title>
+    <title>After Effects Plugins and Scripts</title>
+    <meta charset="utf-8">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+
+
+    <meta name="description" content="After Effects plugins and scripts for motion design, VFX, 3D">
+    <meta name="keywords" content="After Effects, Plugins, Scripts, After Effects Plugins Free Download, Plugins for After Effects">
+
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://monter.is">
+    <meta property="og:title" content="Free After Effects Plugins">
+    <meta property="og:description" content="After Effects plugins and scripts for motion design, VFX, 3D">
+ 
+
     <style>
         /* webkit printing magic: print all background colors */
         html {
@@ -630,7 +644,7 @@
             <figure id="60f8bc2e-3415-401f-a5bd-5c778ce56b3e"><video type="video/mp4" width="640px" autoplay loop muted
                     playsinline>
                     <source src="monter-new-promo-tg.mp4" type="video/mp4"></video></figure>
-            <h1 class="page-title">Download cracked plugins & scripts for free without any mirrors and waiting</h1>
+            <h1 class="page-title">Download After Effects Plugins and Scripts for free without any mirrors and waiting</h1>
         </header>
         <div class="page-body">
             <figure class="block-color-gray_background callout" style="white-space:pre-wrap;display:flex"
