--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://monter.is">
-    <meta property="og:title" content="Free After Effects Plugins">
+    <meta property="og:title" content="After Effects Plugins and Scripts">
     <meta property="og:description" content="After Effects plugins and scripts for motion design, VFX, 3D">
  
 
@@ -658,7 +658,7 @@
             </p>
             <p id="d74c3e85-cc14-4af0-8c86-eb6904414d9e" class=""></p>
             <h2 id="3e486cdd-5552-4fda-a35f-a80a501ee35f" class="link-center"><mark class="highlight-yellow"><strong>→
-                        <a href="http://gns.io/mt1" target="_blank">Click to Join, if you have Telegram account</a>
+                        <a href="http://gns.io/mt1" target="_blank">Click to join, if you have Telegram account</a>
                         ←</strong></mark></h2>
             <h1 id="695c926e-7c15-4da4-ae5e-afa9f5096c39" class="">If you don't have Telegram account</h1>
             <p id="e83c5d2e-180b-4788-a796-64c8104ae41a" class="">You should download Telegram client for your devices:
