--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
             </p>
             <p id="d74c3e85-cc14-4af0-8c86-eb6904414d9e" class=""></p>
             <h2 id="3e486cdd-5552-4fda-a35f-a80a501ee35f" class="link-center"><mark class="highlight-yellow"><strong>→
-                        <a href="http://gns.io/mt1" target="_blank">Click to join, if you have Telegram account</a>
+                        <a href="https://tr.im/mograph" target="_blank">Click to join, if you have Telegram account</a>
                         ←</strong></mark></h2>
             <h1 id="695c926e-7c15-4da4-ae5e-afa9f5096c39" class="">If you don't have Telegram account</h1>
             <p id="e83c5d2e-180b-4788-a796-64c8104ae41a" class="">You should download Telegram client for your devices:
@@ -666,23 +666,17 @@
                 <li><a href="https://play.google.com/store/apps/details?id=org.telegram.messenger">Download for
                         Android</a></li>
                 <li><a href="https://telegram.org/dl/desktop/win">Download for Windows</a></li>
+                <li><a href="https://telegram.org/dl/desktop/mac">Download for Mac</a></li>
+                <li><a href="https://apps.apple.com/app/telegram-messenger/id686449807">Download for iPhone & iPad</a></li>
                 <li><a href="https://telegram.org/dl/desktop/linux">Download for Linux</a></li>
-                <li>To Download for Mac &amp; iPhone properly read the guide below <strong>↓↓↓</strong></li>
             </ul>
-            <h3 id="7f9e1bd2-7b84-4117-b15e-9009231c2593" class="">🔥🔥🔥 <strong>Pay attention → If you are Apple
-                    Devices&#x27; user</strong></h3>
-            <p id="c21b71f8-ce87-476a-9266-10a30707148a" class="">Due copyright strike our archive doesn&#x27;t work on
-                Apple Devices, <mark class="highlight-yellow_background">but there is a lifehack:</mark></p>
-            <p id="c6c31484-98ab-436d-a84e-eaa8b5579065" class=""><strong><a
-                        href="https://macos.telegram.org/">Download a client from Telegram website</a></strong>, not
-                from Mac App Store</p>
             <h2 id="fa8df872-f793-4188-b17e-366f24f57e51" class="">If you don&#x27;t know how to Sign Up, watch this
                 tutorial</h2><iframe class="video-youtube" width="640" height="400"
                 src="https://www.youtube.com/embed/tniO5LCaXbQ" frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
             <h1 id="7a1010c1-01cc-4bfb-9979-00df2f2af8b3" class="">After sign up <mark
-                    class="highlight-yellow_background">click this <a href="http://gns.io/mt1">invite link</a></mark> on
+                    class="highlight-yellow_background">click this <a href="https://tr.im/mograph">invite link</a></mark> on
                 the device where you installed Telegram app</h1>
         </div>
         <iframe
