--- a/index.html
+++ b/index.html
@@ -638,9 +638,9 @@
 </head>
 
 <body>
-    <article id="394fbe2e-a61f-4d5b-a78a-583617b33ad9" class="page sans">
+    <article class="page sans">
         <header>
-            <figure id="60f8bc2e-3415-401f-a5bd-5c778ce56b3e"><video type="video/mp4" width="640px" autoplay loop muted
+            <figure><video type="video/mp4" width="640px" autoplay loop muted
                     playsinline>
                     <source src="monter-new-promo-tg.mp4" type="video/mp4"></video></figure>
             <h1 class="page-title">Download After Effects Plugins and Scripts for free without any mirrors and waiting</h1>
@@ -650,19 +650,19 @@
                 id="d92c490e-1ef6-403c-aae6-75e2649c6efc">
                 <div style="width:100%">To understand how to join, please read the guide properly ↓↓↓</div>
             </figure>
-            <p id="834f2e8e-103d-49f3-aef9-8ea4a3cad5f7" class=""><strong>Our archive is hosted on Telegram
+            <p class=""><strong>Our archive is hosted on Telegram
                     messenger</strong>. Telegram messenger is super-fast, simple and <mark
                     class="highlight-yellow_background">free messaging app, that works on all device.</mark> But most
                 people from Europe, American countries, East Asia don't know about it, that’s why we prepared a guide.
             </p>
-            <p id="d74c3e85-cc14-4af0-8c86-eb6904414d9e" class=""></p>
+            <p class=""></p>
             <h2 id="3e486cdd-5552-4fda-a35f-a80a501ee35f" class="link-center"><mark class="highlight-yellow"><strong>→
                         <a href="https://tr.im/mograph" target="_blank">Click to join, if you have Telegram account</a>
                         ←</strong></mark></h2>
-            <h1 id="695c926e-7c15-4da4-ae5e-afa9f5096c39" class="">If you don't have Telegram account</h1>
-            <p id="e83c5d2e-180b-4788-a796-64c8104ae41a" class="">You should download Telegram client for your devices:
+            <h1 class="">If you don't have Telegram account</h1>
+            <p class="">You should download Telegram client for your devices:
             </p>
-            <ul id="8f7e946d-e722-4f9c-a946-2bd3e738510e" class="bulleted-list">
+            <ul class="bulleted-list">
                 <li><a href="https://play.google.com/store/apps/details?id=org.telegram.messenger">Download for
                         Android</a></li>
                 <li><a href="https://telegram.org/dl/desktop/win">Download for Windows</a></li>
@@ -670,12 +670,12 @@
                 <li><a href="https://apps.apple.com/app/telegram-messenger/id686449807">Download for iPhone & iPad</a></li>
                 <li><a href="https://telegram.org/dl/desktop/linux">Download for Linux</a></li>
             </ul>
-            <h2 id="fa8df872-f793-4188-b17e-366f24f57e51" class="">If you don&#x27;t know how to Sign Up, watch this
+            <h2 class="">If you don&#x27;t know how to Sign Up, watch this
                 tutorial</h2><iframe class="video-youtube" width="640" height="400"
                 src="https://www.youtube.com/embed/tniO5LCaXbQ" frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
-            <h1 id="7a1010c1-01cc-4bfb-9979-00df2f2af8b3" class="">After sign up <mark
+            <h1 class="">After sign up <mark
                     class="highlight-yellow_background">click this <a href="https://tr.im/mograph">invite link</a></mark> on
                 the device where you installed Telegram app</h1>
         </div>
