updated invite link

--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
             </p>
             <p class=""></p>
             <h2 id="3e486cdd-5552-4fda-a35f-a80a501ee35f" class="link-center"><mark class="highlight-yellow"><strong>→
-                        <a href="https://tr.im/mograph" target="_blank">Click to join, if you have Telegram account</a>
+                        <a href="https://tr.im/m-in" target="_blank">Click to join, if you have Telegram account</a>
                         ←</strong></mark></h2>
             <h1 class="">If you don't have Telegram account</h1>
             <p class="">You should download Telegram client for your devices:
@@ -676,7 +676,7 @@
                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
             <h1 class="">After sign up <mark
-                    class="highlight-yellow_background">click this <a href="https://tr.im/mograph">invite link</a></mark> on
+                    class="highlight-yellow_background">click this <a href="https://tr.im/m-in">invite link</a></mark> on
                 the device where you installed Telegram app</h1>
         </div>
         <iframe
