--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
 
     <meta name="description" content="After Effects plugins and scripts for motion design, VFX, 3D">
-    <meta name="keywords" content="After Effects, Plugins, Scripts, After Effects Plugins Free Download, Plugins for After Effects">
+    <meta name="keywords"
+        content="After Effects, Plugins, Scripts, After Effects Plugins Free Download, Plugins for After Effects">
 
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website">
@@ -16,20 +17,24 @@
     <meta property="og:title" content="After Effects Plugins and Scripts">
     <meta property="og:description" content="After Effects plugins and scripts for motion design, VFX, 3D">
 
-    <script type="text/javascript" >
-        (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-        m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-        (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-     
+    <script type="text/javascript">
+        (function (m, e, t, r, i, k, a) {
+        m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
+            m[i].l = 1 * new Date(); k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+        })
+            (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
         ym(56987398, "init", {
-             clickmap:true,
-             trackLinks:true,
-             accurateTrackBounce:true,
-             webvisor:true
+            clickmap: true,
+            trackLinks: true,
+            accurateTrackBounce: true,
+            webvisor: true
         });
-     </script>
-     <noscript><div><img src="https://mc.yandex.ru/watch/56987398" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
- 
+    </script>
+    <noscript>
+        <div><img src="https://mc.yandex.ru/watch/56987398" style="position:absolute; left:-9999px;" alt="" /></div>
+    </noscript>
+
     <style>
         /* webkit printing magic: print all background colors */
         html {
@@ -648,49 +653,74 @@
         .link-center {
             text-align: center;
         }
+
+        .myButton {
+            box-shadow: inset 0px -3px 7px 0px #29bbff;
+            background: linear-gradient(to bottom, #2dabf9 5%, #0688fa 100%);
+            background-color: #2dabf9;
+            border-radius: 3px;
+            border: 1px solid #0b0e07;
+            display: inline-block;
+            cursor: pointer;
+            color: #ffffff;
+            font-family: Arial;
+            font-size: 18px;
+            padding: 9px 23px;
+            text-decoration: none;
+            text-shadow: 0px 1px 0px #263666;
+            font-weight: 700;
+            margin-top: 20px;
+        }
+
+        .myButton:hover {
+            background: linear-gradient(to bottom, #0688fa 5%, #2dabf9 100%);
+            background-color: #0688fa;
+        }
+
+        .myButton:active {
+            position: relative;
+            top: 1px;
+        }
     </style>
 </head>
 
 <body>
     <article class="page sans">
         <header>
-            <figure><video type="video/mp4" width="640px" autoplay loop muted
-                    playsinline>
+            <figure><video type="video/mp4" width="640px" autoplay loop muted playsinline>
                     <source src="monter-new-promo-tg.mp4" type="video/mp4"></video></figure>
-            <h1 class="page-title">Download After Effects Plugins and Scripts for free without any mirrors and waiting</h1>
+            <h1 class="page-title">Download After Effects Plugins and Scripts for free without any mirrors and waiting
+            </h1>
         </header>
         <div class="page-body">
             <figure class="block-color-gray_background callout" style="white-space:pre-wrap;display:flex"
                 id="d92c490e-1ef6-403c-aae6-75e2649c6efc">
                 <div style="width:100%">To understand how to join, please read the guide properly ↓↓↓</div>
             </figure>
-            <p class=""><strong>Our archive is hosted on Telegram
-                    messenger</strong>. Telegram messenger is super-fast, simple and <mark
-                    class="highlight-yellow_background">free messaging app, that works on all device.</mark> But most
-                people from Europe, American countries, East Asia don't know about it, that’s why we prepared a guide.
+            <p><strong>Our archive is hosted on Telegram messenger</strong>. Telegram messenger is super-fast, simple
+                and <mark class="highlight-yellow_background">free messaging app, that works on all device.</mark>But
+                most people from Europe, American countries, East Asia don't know about it, that’s why we prepared a guide.
             </p>
-            <p class=""></p>
-            <h2 id="3e486cdd-5552-4fda-a35f-a80a501ee35f" class="link-center"><mark class="highlight-yellow"><strong>→
-                        <a href="https://tr.im/m-in" target="_blank">Click to join, if you have Telegram account</a>
-                        ←</strong></mark></h2>
-            <h1 class="">If you don't have Telegram account</h1>
-            <p class="">You should download Telegram client for your devices:
+            <div class="link-center"><a href="https://tr.im/m-in" target="_blank" class="myButton">If you already have Telegram account, click to join</a></div>
+            <h1>If you don't have Telegram account</h1>
+            <p >You should download Telegram client for your devices:
             </p>
             <ul class="bulleted-list">
                 <li><a href="https://play.google.com/store/apps/details?id=org.telegram.messenger">Download for
                         Android</a></li>
                 <li><a href="https://telegram.org/dl/desktop/win">Download for Windows</a></li>
                 <li><a href="https://telegram.org/dl/desktop/mac">Download for Mac</a></li>
-                <li><a href="https://apps.apple.com/app/telegram-messenger/id686449807">Download for iPhone & iPad</a></li>
+                <li><a href="https://apps.apple.com/app/telegram-messenger/id686449807">Download for iPhone & iPad</a>
+                </li>
                 <li><a href="https://telegram.org/dl/desktop/linux">Download for Linux</a></li>
             </ul>
-            <h2 class="">If you don&#x27;t know how to Sign Up, watch this
+            <h2 >If you don&#x27;t know how to Sign Up, watch this
                 tutorial</h2><iframe class="video-youtube" width="640" height="400"
                 src="https://www.youtube.com/embed/tniO5LCaXbQ" frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
-            <h1 class="">After sign up <mark
-                    class="highlight-yellow_background">click this <a href="https://tr.im/m-in">invite link</a></mark> on
+            <h1 >After sign up <mark class="highlight-yellow_background">click this <a
+                        href="https://tr.im/m-in">invite link</a></mark> on
                 the device where you installed Telegram app</h1>
         </div>
         <iframe
