--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@
             background: linear-gradient(to bottom, #2dabf9 5%, #0688fa 100%);
             background-color: #2dabf9;
             border-radius: 3px;
-            border: 1px solid #0b0e07;
+            border: 1px solid #2295e2;
             display: inline-block;
             cursor: pointer;
             color: #ffffff;
