--- a/index.html
+++ b/index.html
@@ -706,13 +706,12 @@
             <p >You should download Telegram client for your devices:
             </p>
             <ul class="bulleted-list">
-                <li><a href="https://play.google.com/store/apps/details?id=org.telegram.messenger">Download for
-                        Android</a></li>
-                <li><a href="https://telegram.org/dl/desktop/win">Download for Windows</a></li>
-                <li><a href="https://telegram.org/dl/desktop/mac">Download for Mac</a></li>
-                <li><a href="https://apps.apple.com/app/telegram-messenger/id686449807">Download for iPhone & iPad</a>
+                <li><a href="https://play.google.com/store/apps/details?id=org.telegram.messenger">Android</a></li>
+                <li><a href="https://telegram.org/dl/desktop/win">Windows</a></li>
+                <li><a href="https://telegram.org/dl/desktop/mac">Mac</a></li>
+                <li><a href="https://apps.apple.com/app/telegram-messenger/id686449807">iPhone & iPad</a>
                 </li>
-                <li><a href="https://telegram.org/dl/desktop/linux">Download for Linux</a></li>
+                <li><a href="https://telegram.org/dl/desktop/linux">Linux</a></li>
             </ul>
             <h2 >If you don&#x27;t know how to Sign Up, watch this
                 tutorial</h2><iframe class="video-youtube" width="640" height="400"
