--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
                 and <mark class="highlight-yellow_background">free messaging app, that works on all device.</mark>But
                 most people from Europe, American countries, East Asia don't know about it, that’s why we prepared a guide.
             </p>
-            <div class="link-center"><a href="https://tr.im/m-in" target="_blank" class="myButton">If you already have Telegram account, click to join</a></div>
+            <div class="link-center"><a href="https://tr.im/join-to" target="_blank" class="myButton">If you already have Telegram account, click to join</a></div>
             <h1>If you don't have Telegram account</h1>
             <p >You should download Telegram client for your devices:
             </p>
@@ -719,7 +719,7 @@
                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
             <h1 >After sign up <mark class="highlight-yellow_background">click this <a
-                        href="https://tr.im/m-in">invite link</a></mark> on
+                        href="https://tr.im/join-to">invite link</a></mark> on
                 the device where you installed Telegram app</h1>
         </div>
     </article>
