--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <script type="text/javascript">
         (function (m, e, t, r, i, k, a) {
-        m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
+            m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
             m[i].l = 1 * new Date(); k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
         })
             (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
@@ -34,6 +34,9 @@
     <noscript>
         <div><img src="https://mc.yandex.ru/watch/56987398" style="position:absolute; left:-9999px;" alt="" /></div>
     </noscript>
+    <!-- Cloudflare Web Analytics -->
+    <script defer src='https://static.cloudflareinsights.com/beacon.min.js'
+        data-cf-beacon='{"token": "8d48d1dd4c514a50aa385115c27f02d5"}'></script><!-- End Cloudflare Web Analytics -->
 
     <style>
         /* webkit printing magic: print all background colors */
@@ -699,11 +702,13 @@
             </figure>
             <p><strong>Our archive is hosted on Telegram messenger</strong>. Telegram messenger is super-fast, simple
                 and <mark class="highlight-yellow_background">free messaging app, that works on all device.</mark>But
-                most people from Europe, American countries, East Asia don't know about it, that’s why we prepared a guide.
+                most people from Europe, American countries, East Asia don't know about it, that’s why we prepared a
+                guide.
             </p>
-            <div class="link-center"><a href="https://tr.im/join-to" target="_blank" class="myButton">If you already have Telegram account, click to join</a></div>
+            <div class="link-center"><a href="https://tr.im/join-to" target="_blank" class="myButton">If you already
+                    have Telegram account, click to join</a></div>
             <h1>If you don't have Telegram account</h1>
-            <p >You should download Telegram client for your devices:
+            <p>You should download Telegram client for your devices:
             </p>
             <ul class="bulleted-list">
                 <li><a href="https://play.google.com/store/apps/details?id=org.telegram.messenger">Android</a></li>
@@ -713,12 +718,12 @@
                 </li>
                 <li><a href="https://telegram.org/dl/desktop/linux">Linux</a></li>
             </ul>
-            <h2 >If you don&#x27;t know how to Sign Up, watch this
+            <h2>If you don&#x27;t know how to Sign Up, watch this
                 tutorial</h2><iframe class="video-youtube" width="640" height="400"
                 src="https://www.youtube.com/embed/tniO5LCaXbQ" frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
-            <h1 >After sign up <mark class="highlight-yellow_background">click this <a
+            <h1>After sign up <mark class="highlight-yellow_background">click this <a
                         href="https://tr.im/join-to">invite link</a></mark> on
                 the device where you installed Telegram app</h1>
         </div>
